<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="200sp"
        android:layout_height="170sp"
        android:layout_marginTop="20sp"
        android:src="@drawable/logo2"
        android:layout_gravity="center"
        android:contentDescription="@string/welcome_image_description"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:text="@string/citation"
        android:textSize="25sp" />
</LinearLayout>