<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_med_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textAllCaps="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageButton
                android:id="@+id/btn_view"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_visibility"
                android:contentDescription="@string/view_treatment"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/green" />

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_treatment"
                android:src="@drawable/ic_edit"
                app:tint="@color/blue_col"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete_treatment"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginStart="16dp"
                app:tint="@color/red" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>